affix layout issues resolved.

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,12 @@
 .navbar-example {
 	background-color: red;
 	position: relative;
-	width: 200px;
+	width: 180px;
+	padding-top: 30px;
+}
+
+.navbar-example.affix {
+	top: 0;
 }
 
 /* Get er' done */
